fix overflow scroll

--- a/css/devconsole.css.sass
+++ b/css/devconsole.css.sass
@@ -94,6 +94,8 @@ html,body
     overflow: hidden
     overflow-x: hidden
     z-index: 1001
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05)
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05)
     /*-webkit-overflow-scrolling: touch*/
 
   .pn-panel:hover 
